k8s-monitoring/11-loki-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`loki.<<seu-dominio>>`) || Host(`<<IP-PRIVADO-DO-K8S>>`)
      kind: Rule
      services:
        - name: loki
          port: 3100
